itemsコントローラー生成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-  <%= if user_signed_in? %>
+  <% if user_signed_in? %>
     <% link_to "ログアウト", destroy_user_session_path, method: :delete %>
     <% link_to "トップ", item_path %>
     <% link_to "投稿画面へ", new_item_path %>
